@@ -30,6 +30,7 @@ Changes in 3.2rc1 :
 - Fix crash when removing torrent (178175)
 - Fix saving and restoring of expanded state of FileView (178022)
 - Remove new from system tray menu (177404)
+- Ditch QSortFilterProxyModel when possible
 
 
 Changes in 3.2beta1 :
